--- a/README
+++ b/README
@@ -1,18 +1,5 @@
-Welcome to your Appcelerator Titanium Mobile Project
+#World Whispers
+you put in a phrase and watch it change over the course of several bad translations.
 
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
-
-
-
-----------------------------------
-Stuff our legal folk make us say:
-
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
-
-Titanium is Copyright (c) 2008-2013 by Appcelerator, Inc. All Rights Reserved.
-
-Titanium is licensed under the Apache Public License (Version 2). Please
-see the LICENSE file for the full license.
-
+Bug:
++ you may need to change the google translate api key.
